# tghtml

./: README.md  pyproject.toml  setup.py  tests.py  usage.py
.github/workflows/: python-PR-test.yml  python-test.yml
tests/: test_basic_styles.py
tghtml/: __init__.py  core.py  parser.py
